[package]
name = "wimhrst"
description = "Static generator"
repository = "https://github.com/oclyke/wimhrst"
readme = "README.md"
keywords = ["static", "site", "generator"]
categories = ["web-programming", "compilers"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[[example]]
name = "basic"
path = "examples/basic/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
topologic = "1.1.0"

[dev-dependencies]
walkdir = "2.4.0"
