[package]
name = "blanket-rs"
description = "Static generator"
repository = "https://github.com/oclyke/blanket-rs"
readme = "README.md"
keywords = ["static", "site", "generator"]
categories = ["web-programming", "compilers"]
version = "2.0.0-alpha-rc3"
edition = "2021"
license = "MIT"
exclude = [
    "examples/blanket-rs-net/**/*",
]

[[example]]
name = "basic"
path = "examples/basic/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
topologic = "1.1.0"
regex = "1.10.3"
walkdir = "2.4.0"

[dev-dependencies]
